src/main/resources/static/css/index.css
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
    color: #333;
    text-shadow: none;
}

.cover-container {
    max-width: 42em;
}

/*
 * Header
 */

.nav-masthead .nav-link {
    color: rgba(255, 255, 255, .5);
    border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

.nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
}

/*
 * Header Ends
 */

a{
    cursor: pointer;
}

.banner{
    height: 100vh;
}


.hidden{
    opacity: 0;
    transition: all 1s;
    filter: blur(5px);
    transform: translateX(-100%);
}

.fade-in{
    opacity: 1 !important;
    filter:blur(0);
    transform: translateX(0);
}

.credit:nth-child(2){
    transition-delay: 0.25s;
}

.credit:nth-child(3){
    transition-delay: 0.5s;
}

